--- a/Main.tex
+++ b/Main.tex
@@ -31,8 +31,8 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%   			Liste des fichiers à compiler					%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-	\includeonly{Chapitre1,Chapitre2,Chapitre3,Annexes}
-
+	\includeonly{Chapitre1,Chapitre2,Chapitre3,Chapitre4,Annexes}
+ 
 
 
 % Infos de la page de garde
