--- a/Main.tex
+++ b/Main.tex
@@ -81,10 +81,10 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 	\pagenumbering{arabic}
 
-	\includefrom{Chapitre1/}{Chapitre1}	
-	\includefrom{Chapitre2/}{Chapitre2} 		
-	\includefrom{Chapitre3/}{Chapitre3}	
-	\includefrom{Chapitre4/}{Chapitre4}	
+	\includefrom{rep_Chapitre1/}{Chapitre1}	
+	\includefrom{rep_Chapitre2/}{Chapitre2} 		
+	\includefrom{rep_Chapitre3/}{Chapitre3}	
+	\includefrom{rep_Chapitre4/}{Chapitre4}	
 	
 	
 	% Annexes
