on commence compensation de flux

--- a/Chapitre2.tex
+++ b/Chapitre2.tex
@@ -146,7 +146,7 @@ Du fait du principe de l’imagerie TOF, la qualité de l’image récupérée v
 \begin{figure}[!t]
 \centering
 \includegraphics[width=11cm]{1_8_IRM_temps_de_vol}
-\caption{Exemple d'image d'IRM par temps de vol. Le sang entrant dans le volume à imager apparait en hyper signal. A gauche l’image brute, à droite une projection des intensités maximales. La projection est obenue en identifiant le long de l'axe Z en chaque pixel(x,y) l'intensité maximale, le tout étant donc représenté dans une vue 2D. Séquence en temps de vol 3D obtenue à 3T (antenne 32 canaux) avec les paramètres : TE/TR = 3.43/21 ms, angle de bascule = 18°, taille du voxel = 0.26 x 0.26 x 0.6 mm, 220 coupes.}
+\caption{Exemple d'image d'IRM par temps de vol. Le sang entrant dans le volume à imager apparait en hyper signal. A gauche l’image brute, à droite une projection des intensités maximales. La projection est obenue en identifiant le long de l'axe Z en chaque pixel(x,y) l'intensité maximale, le tout étant donc représenté dans une vue 2D. Séquence en temps de vol 3D obtenue à 3T (antenne 32 canaux) avec les paramètres : TE/TR = 3.43/21 ms, angle de bascule = 18°, taille du voxel = 0.26 x 0.26 x 0.6 mm, 220 coupes, temps d'acquisition = 6 min.}
 \label{fig:1_8_IRM_temps_de_vol}	
 \end{figure}
 En fonction du contexte, l’acquisition peut être 2D ou 3D. Lors d’une acquisition 2D un ensemble de coupes fines est effectué pour aboutir à un pseudo-volume 3D. Les coupes fines autorisent une meilleure sensibilité aux flux lents du fait du temps plus court passé dans la coupe. En effet les flux lents subissent l'effet de saturation de façon similaire au tissu stationnaire, l'utilisation de fines coupes permet permet de limiter cet effet, le sang ayant le temps de traverser ce petit volume. En contrepartie, la résolution spatiale dans l’axe de la pile de coupe est limitée. Les acquisitions 3D autorisent elles l’obtention d’une bonne résolution spatiale dans les 3 directions, ainsi qu’un meilleur rapport signal sur bruit. En revanche les flux lents risquent d’être peu voir non visibles.\\
@@ -170,7 +170,7 @@ Les images obtenues permettent de visualiser l’ensemble des vaisseaux (Figure~
 \begin{figure}[!t]
 \centering
 \includegraphics[width=9cm]{1_11_exemple_contraste_phase}
-\caption{Exemple d'image de contraste de phase (projection). Paramètres: champ de vue 24 x 24 cm, temps d’écho = 7.91 ms, temps de répétition = 35.7 ms, angle de bascule = 15°, taille de voxel = 0.47 x 0.47 x 1 mm, 144 niveaux de coupes.}
+\caption{Exemple d'image de contraste de phase (projection). Paramètres: champ de vue 24 x 24 cm, temps d’écho = 7.91 ms, temps de répétition = 35.7 ms, angle de bascule = 15°, taille de voxel = 0.47 x 0.47 x 1 mm, 144 niveaux de coupes, temps d'acquisition = 6 min.}
 \label{fig:1_11_exemple_contraste_phase}	
 \end{figure}
 
@@ -184,7 +184,7 @@ Une autre technique mettant en relief de nouveaux contrastes plus fins a été d
 \end{equation}
 On distingue deux comportements différents. Certains comme l’eau, le cuivre ou le zinc, vont s’{\em opposer au champ}, entrainant une diminution de la densité des lignes de forces : on les appelle {\em diamagnétiques} (leur susceptibilité est {\em inférieure à 0}). D’autres au contraire vont se{\em placer dans le sens due champ} (air, fer, magnésium), induisant un accroissement de la densité des lignes de forces : ce sont les substances {\em paramagnétiques} (susceptibilité {\em supérieure à 0}).\\
 A l’intérieur du cerveau coexistent des substances possédant différentes propriétés vis-à-vis de la magnétisation : certaines structures vont ainsi être plutôt diamagnétique (myéline) ou paramagnétique (veines, pallidum ; \cite{Wang_Liu_2014}). La possibilité de mesurer quantitativement cette susceptibilité a été évoquée dès les premières années de l’imagerie IRM (\cite{Young1987}). Les variations locales de la susceptibilité engendrent des variations locales concomitantes du champ magnétique effectif subit par le matériau, qui vont engendrer des distorsions locales des lignes de champ et ainsi des décalages en fréquence localisés. Les variations de susceptibilités sont donc à première vue des source d’{\em artéfacts}.  
-Depuis une quinzaine d'années a été développée une première modalité d’imagerie sensible aux variations de susceptibilité : l’{\em imagerie pondérée en susceptibilité} (Susceptibility Weighted Imaging ou SWI; \cite{Reichenbach2001}). Cette méthode tente d’utiliser l’information portée par l’imagerie de phase afin de fournir un contraste nouveau sensible en particulier aux veines et autres structures disposant d’une forte susceptibilité (cavernomes, calcifications etc.). En effet la saturation en oxygène dans le système veineux étant faible, le sang veineux est riche en dé-oxyhémoglobine, molécule disposant d’une forte susceptibilité. De ce fait cette imagerie donne accès au système veineux et ce potentiellement avec une meilleure résolution que le contraste de phase à durée équivalente. \textcolor{red}{ pourquoi? on allume pas les gradients d'encodage?} :on peut avoir accès à des veines plus petites. La résolution à 3T pouvant être de l'ordre de 0.6 x 0.6 x 0.6 mm. En revanche l’image ne contient pas que des vaisseaux, toutes les structures présentant une susceptibilité importante et du fait de la magnitude, les autres tissus. Il reste cependant possible d’extraire une partie des veines de l’image via des algorithmes dédiés (\cite{Manniesing2006}) avec plus ou moins de succès.\\
+Depuis une quinzaine d'années a été développée une première modalité d’imagerie sensible aux variations de susceptibilité : l’{\em imagerie pondérée en susceptibilité} (Susceptibility Weighted Imaging ou SWI; \cite{Reichenbach2001}). Cette méthode tente d’utiliser l’information portée par l’imagerie de phase afin de fournir un contraste nouveau sensible en particulier aux veines et autres structures disposant d’une forte susceptibilité (cavernomes, calcifications etc.). En effet la saturation en oxygène dans le système veineux étant faible, le sang veineux est riche en dé-oxyhémoglobine, molécule disposant d’une forte susceptibilité. De ce fait cette imagerie donne accès au système veineux et ce potentiellement avec une résolution légèrement plus fine que le contraste de phase (0.6 mm isotropique contre 0.47 x 0.47 x 1 mm) pour un temps d'acquisition similaire (6 à 7 min). En susceptibilité  l'information récupérée ne dépend pas de l'orientation de gradients, aucun gradients d'encodage de flux n'est utilisé. Cela permet d'avoir accès aux veines peut importe leur orientation (\cite{Fan2014}). L'ensemble conduit à avoir accès à des veines plus petites. En revanche l’image ne contient pas que des vaisseaux, toutes les structures présentant une susceptibilité importante et du fait de la magnitude, les autres tissus. Il reste cependant possible d’extraire une partie des veines de l’image via des algorithmes dédiés (\cite{Manniesing2006}) avec plus ou moins de succès.\\
 Rappelons que lors d’une acquisition standard en IRM, le signal récupéré est codé sous forme complexe, et contient donc deux informations : partie imaginaire et partie réelle. Le plus usuellement ces deux informations sont combinées pour générer une imagerie de magnitude correspondant à la somme du carré des parties réelles et imaginaires :
 \begin{equation}
 M\,=\,Re^2\,+\,Im^2.
@@ -214,12 +214,14 @@ Compte tenu du cahier des charges défini dans l’introduction, la construction
 Nous avons donc défini un protocole d’acquisition IRM dédié à l’implémentation de ce modèle qui incorpore toutes les séquences nécessaires à la collecte de ces informations au vue de l’état de l’art et des contraintes techniques de nos appareils. Nous faisons le choix, de n’utiliser que des séquences non-injectées afin de ne limiter le protocole à aucune catégorie de patients. Néanmoins, dans le cadre de la validation du modèle,  nous n’excluons évidemment pas d’utiliser dans certains cas particuliers des protocoles avec injection. Les données d’imagerie IRM ont été recueillies sur une IRM 3 tesla (Skyra, Siemens, Allemagne) en utilisant une antenne tête 32 éléments. Ces séquences sont bien définies dans la littérature et communes, nous ne discuterons donc pas le détail de chacun des paramètres. La SWI fera cependant exception, le détail et les justifications étant données dans un chapitre dédié (\textcolor{red}{renvoi au chapitre QSM}).\\
 Concernant les informations morphologiques, le protocole inclus les imageries anatomiques suivantes :
 \begin{itemize}
-\item un 3DT1 pour récupérer les volumes de matière grise, de matière blanche et de LCS, acquis avec les paramètres suivants : champ de vue = 25 x 25 cm, temps d’écho = 2.5 ms, temps de répétition = 1690 ms, angle de bascule = 9°, taille de voxel = 0.98 x 0.98 x 1 mm, 176 niveaux de coupes ;
-\item un temps de vol artériel pour accéder à l’architecture artérielle, avec les paramètres : champ de vue 18.1 x 20 cm, temps d’écho = 3.43 ms, temps de répétition = 21 ms, angle de bascule = 18°, taille de voxel = 0.26 x 0.26 x 0.6 mm, 220 niveaux de coupes ; avec une couverture suffisante pour imager jusqu’à la partie supérieure de l’artère cérébrale antérieure
-\item un contraste de phase qualitatif pour récupérer le compartiment veineux avec les paramètres : champ de vue 24 x 24 cm, temps d’écho = 7.91 ms, temps de répétition = 35.7 ms, angle de bascule = 15°, taille de voxel = 0.47 x 0.47 x 1 mm, 144 niveaux de coupes ;
-\item une imagerie quantitative de susceptibilité magnétique afin de préciser l’arborescence veineuse avec les paramètres : champ de vue 20 x 22 cm, temps d’échos = 10/20 ms, temps de répétition = 27 ms, angle de bascule = 15°, taille de voxel = 0.69 x 0.69 x 0.6 mm, 224 niveaux de coupes ; avec sauvegarde des raw data.
+\item un 3DT1 pour récupérer les volumes de matière grise, de matière blanche et de LCS, acquis avec les paramètres suivants : champ de vue = 25 x 25 cm, temps d’écho = 2.5 ms, temps de répétition = 1690 ms, angle de bascule = 9°, taille de voxel = 0.98 x 0.98 x 1 mm, 176 niveaux de coupes, temps d'acquisition = 4 min ;
+\item un temps de vol artériel pour accéder à l’architecture artérielle, avec les paramètres : champ de vue 18.1 x 20 cm, temps d’écho = 3.43 ms, temps de répétition = 21 ms, angle de bascule = 18°, taille de voxel = 0.26 x 0.26 x 0.6 mm, 220 niveaux de coupes,  temps d'acquisition = 6 min ; avec une couverture suffisante pour imager jusqu’à la partie supérieure de l’artère cérébrale antérieure
+\item un contraste de phase qualitatif pour récupérer le compartiment veineux avec les paramètres : champ de vue 24 x 24 cm, temps d’écho = 7.91 ms, temps de répétition = 35.7 ms, angle de bascule = 15°, taille de voxel = 0.47 x 0.47 x 1 mm, 144 niveaux de coupes,  temps d'acquisition = 6 min ;
+\item une imagerie quantitative de susceptibilité magnétique afin de préciser l’arborescence veineuse avec les paramètres : champ de vue 20 x 22 cm, temps d’échos = 10/20 ms, temps de répétition = 27 ms, angle de bascule = 15°, taille de voxel = 0.69 x 0.69 x 0.6 mm, 224 niveaux de coupes,  temps d'acquisition = 6 min 30 sec ; avec sauvegarde des raw data.
 \end{itemize}
 Comme nous l’avons vu l’arbre vasculaire est un système complexe. Il convient donc de définir clairement à quel niveau nous souhaitons nous placer afin de définir les entrées et sorties utilisées. Le sang entre dans le cerveau principalement par 4 voies : les deux carotides internes et les artères vertébrales. Ces artères vertébrales se rejoignent pour former l’artère basilaire. Ainsi pour limiter la complexité du système nous avons choisi de positionner notre boite d’acquisition de telle sorte à ce que le premier niveau de coupe intègre les {\em deux carotides} et l’{\em artère basilaire}, pour un total de trois entrées. De plus l’artère basilaire sera plus visible du fait de son diamètre et donc plus facilement segmentable en comparaison des artères vertébrales. En terme de sorties, nous récupèrerons à ce niveau les deux {\em veines jugulaires}.\\
+Enfin il est important d'évoquer un dernier point relatif à l'imagerie des vaisseaux : la compensation de flux. Dans les séquences d'imagerie classiques (excepté le contraste de phase), la phase des spins est sensée correspondre à une information spatiale uniquement (codage de phase). Un gradient bipolaire dont les deux lobes positifs et négatifs sont de même importance n'a pas d'effet sur la phase des spins stationnaires. En revanche, si un spin est en mouvement dans l'axe du gradient, il ne va pas subir le même effet de gradient en fonction de sa position. Par conséquent, les spins mobiles seront mal positionnés et on observera un artéfact de déplacement des structures vasculaires et des fluides en mouvement. Dans notre contextece genre d'artéfacts nous empêcherais d'identifier avec précision les vaisseaux. Dès la fin des années 1980, Pattany et al. \textcolor{green}{ref : Pattany et al., “Motion Artifact Suppression Technique (MAST) for MR Imaging.”} ont proposé un ajustement des gradients afin de corriger ces artéfacts ({\em Motion Artifact Suppression Technique (MAST)}), connues maintenant sous le nom de {\em compensation de flux}. Dans cette approche, .\\
+Les séquences utilisées à l'exception du contraste de phase disposeront docn de compensation de flux dans deux directions voir 3 si disponible.\\
 Ce protocole sera complété à la fin de la seconde partie par les modes d’imagerie donnant accès à la {\em dynamique}.
 
 
