--- a/Chapitre3.tex
+++ b/Chapitre3.tex
@@ -3,7 +3,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \chapter{Implémentation de la reconstruction morphologique}
-	
+\label{chap:morpho}	
 	\minitoc
 	
 
@@ -38,7 +38,7 @@ Le filtre utilisant cette méthode est dit filtre de Frangi  (\cite{Frangi1998},
 \caption{Schéma possible en 3D selon la valeur de la valeur propre $\lambda_k$ (H=élevé, L=faible, N = bruité, +/- indique le signe de la valeur propre). Les valeurs propres sont ordonnées selon ($|\lambda_1|\leqslant |\lambda_2|\leqslant |\lambda_3|$ (\cite{Frangi1998}).}
 \label{fig:2_2_tableau_hessienne}	
 \end{figure}
-Mathématiquement, on calcule la matrice Hessienne de l’image à partir de ses dérivées secondes (aux différences finies) et on en extrait des valeurs propres. Ces valeurs propres $\lambda_1$, $\lambda_2$ et $\lambda_3$ (à 3D) caractérisent l’anisotropie des intensités de l’image. Les valeurs propres sont classées par ordre croissant du module ($|\lambda_1|\leqslant|\lambda_2|\leqslant|\lambda_3|$). Un voxel appartenant à un vaisseau doit se caractériser par un ellipsoïde Hessien local allongé : $\lambda_1$ faible (idéalement zéro) et $\lambda_2$ et $\lambda_3$ de grandes magnitudes de mêmes signes. Le tableau de la figure~\ref{fig:2_2_tableau_hessienne} résume les relations existantes entre les valeurs propres de la matrice Hessienne et les différentes structures que l’on cherche à détecter. Avec l’imagerie ToF et le contraste de phase, nous recherchons ainsi les structures claires tubulaires. Le résultat de cette étape est une image dont les intensités représentent pour chaque pixel la vraisemblance d’appartenance à un vaisseau (Figure ~\ref{fig:2_1_segmentation_arteres} C). L’image filtrée est de très bonne qualité (Figure~\ref{fig:2_3_filtre_frangi}). L’utilisation de cet outil moins sensible au bruit et offrant des contours plus lisses, facilite donc les étapes postérieures de traitement. Un simple seuillage, ajusté manuellement, suffit à extraire le volume 3D des vaisseaux (Figure ~\ref{fig:2_1_segmentation_arteres} D, Figure 15). Nous n’avons pas besoin de d’utiliser des algorithmes de croissance de région ou autre. L’utilisateur n’a qu’à adapter le seuil, pour extraire les voxels du masque appartenant aux vaisseaux. 
+Mathématiquement, on calcule la matrice Hessienne de l’image à partir de ses dérivées secondes (aux différences finies) et on en extrait des valeurs propres. Ces valeurs propres $\lambda_1$, $\lambda_2$ et $\lambda_3$ (à 3D) caractérisent l’anisotropie des intensités de l’image. Les valeurs propres sont classées par ordre croissant du module ($|\lambda_1|\leqslant|\lambda_2|\leqslant|\lambda_3|$). Un voxel appartenant à un vaisseau doit se caractériser par un ellipsoïde Hessien local allongé : $\lambda_1$ faible (idéalement zéro) et $\lambda_2$ et $\lambda_3$ de grandes magnitudes de mêmes signes. Le tableau de la figure~\ref{fig:2_2_tableau_hessienne} résume les relations existantes entre les valeurs propres de la matrice Hessienne et les différentes structures que l’on cherche à détecter. Avec l’imagerie ToF et le contraste de phase, nous recherchons ainsi les structures claires tubulaires. Le résultat de cette étape est une image dont les intensités représentent pour chaque pixel la vraisemblance d’appartenance à un vaisseau (Figure ~\ref{fig:2_1_segmentation_arteres} C). L’image filtrée est de très bonne qualité (Figure~\ref{fig:2_3_filtre_frangi}). L’utilisation de cet outil moins sensible au bruit et offrant des contours plus lisses, facilite donc les étapes postérieures de traitement. Un simple seuillage, ajusté manuellement, suffit à extraire le volume 3D des vaisseaux (Figure ~\ref{fig:2_1_segmentation_arteres} D, Figure \ref{fig:2_4_segemtation_cont_phase_tof}). Nous n’avons pas besoin de d’utiliser des algorithmes de croissance de région ou autre. L’utilisateur n’a qu’à adapter le seuil, pour extraire les voxels du masque appartenant aux vaisseaux. 
 %%%
 \begin{figure}[!t]
 \centering
@@ -165,7 +165,7 @@ En l’état de l’imagerie nous avons sélectionné une approche simple consis
 %%%
 %%%
 \subsection{Estimation des paramètres des tubes}
-La distance euclidienne entre artère et veine permet de proposer une longueur totale approchée, qui correspondra à la somme des artérioles, capillaires et veinules.  Nous n’avons aucun moyen d’accéder directement aux informations morphologiques de ces compartiments. Pour limiter le nombre d’hypothèses à réaliser sur le nombre de vaisseaux, il semble plus logique de ne considérer pour chaque couple artère-veine qu’une « super-artériole », qu’un « super-capillaire », et qu’une « super-veinule » regroupant un ensemble N de vaisseaux. Bien que ces compartiments soient difficilement accessible (voir~\ref{sect:microcirculation}), la littérature nous fournit quelques informations sur les rapports de ces différents compartiments via des volumes moyens (\cite{Zagzoule1986}, \cite{Linninger2009}). Parmi celles-ci on retrouve des rapports de longueurs et de volumes. Par ailleurs~\cite{Moody2004} ont estimé la fraction de volume que représentent les artérioles et les capillaires dans la matière grise et blanche par marquage à la phosphatase alcaline. A partir de ces informations et des données issues de la segmentation, il devient possible d’estimer des volumes plausibles pour nos compartiments.\\	
+La distance euclidienne entre artère et veine permet de proposer une longueur totale approchée, qui correspondra à la somme des artérioles, capillaires et veinules.  Nous n’avons aucun moyen d’accéder directement aux informations morphologiques de ces compartiments. Pour limiter le nombre d’hypothèses à réaliser sur le nombre de vaisseaux, il semble plus logique de ne considérer pour chaque couple artère-veine qu’une « super-artériole », qu’un « super-capillaire », et qu’une « super-veinule » regroupant un ensemble N de vaisseaux. Bien que ces compartiments soient difficilement accessible (voir~\ref{sect:microcirculation}), la littérature nous fournit quelques informations sur les rapports de ces différents compartiments via des volumes moyens (\cite{Zagzoule1986}), \cite{Linninger2009}). Parmi celles-ci on retrouve des rapports de longueurs et de volumes. Par ailleurs~\cite{Moody2004} ont estimé la fraction de volume que représentent les artérioles et les capillaires dans la matière grise et blanche par marquage à la phosphatase alcaline. A partir de ces informations et des données issues de la segmentation, il devient possible d’estimer des volumes plausibles pour nos compartiments.\\	
 Dans une première étape, nous réalisons une segmentation sur la base de l’imagerie T1 (voir Appendice 1.2.4) \textcolor{red}{revoir cette ref} . Les volumes matière grise et blanche sont ainsi extraits et un masque de ces tissus créé (probabilité matière grise + blanche > 0.9). En associant à chaque voxel de ce masque le label correspondant au couple artère-veine le plus proche (voir fin du paragraphe~\ref{sect:graph_creation}), on reconstruit les territoires. \\
 Les volumes de ces territoires permettent grâces aux rapports issues de littérature d’estimer les volumes des compartiments : 
 \begin{equation}
@@ -193,6 +193,7 @@ Les rayons moyens des différents compartiments peuvent être visualisés (Figur
 %%%
 %%%
 \section{Le système ventriculaire}
+\label{sec:syst_ventr}
 A ce stade, nous possédons une architecture complète allant des entrées artérielles aux veines. Il manque cependant les informations relatives à la circulation du liquide cérébro-spinal. Ce dernier peut être segmenté facilement via l’outil SPM (voir Appendice 1.2.4)\textcolor{red}{revoir cette ref}. Cependant, cet outil ne fournit aucun moyen d’identification directe des différents ventricules. Une toolbox SPM nommée ALVIN pour « Automatic Lateral Ventricle delIneatioN » propose d’identifier sur la base d’une imagerie T1, et de sa segmentation de données a-priori, les ventricules latéraux (\cite{Kempton2011}). Cependant afin de reproduire un système cohérent, nous souhaitons intégrer les ventricules latéraux, mais aussi les troisième et quatrième ventricules à notre description. Des outils plus ou moins sophistiqués existent par utilisation de modèles du système ventriculaires et d’algorithmes de croissance de région [47][48] (\cite{Liu2009},\cite{Schnack2001}) mais peu sont disponibles gratuitement pour la communauté. Or les ventricules peuvent être facilement segmentés manuellement en 4 clics via des outils de traçage semi-automatique de roi 3D basés sur les intensités. Un exemple est le « 3D painting tool » proposé par MRIcron (\cite{Rorden2007}). En effet, les ventricules apparaissent en hyposignaux clairement délimitable des autres tissus. MRIcron permet de sélectionner automatiquement tous les voxels dans un rayon donné ayant un faible écart en termes d’intensité à un voxel de référence. Des cycles successifs d’érosions/dilatations limite les risques que la ROI « bave » dans des régions non désirées. Cette méthodologie est simple à mettre en place, et efficace (figure ~\ref{fig:2_14_ventricules_segmentes}). \\
 %%%
 \begin{figure}[!t]
@@ -225,6 +226,7 @@ la plus adéquate.
 %%%
 %%%
 \section{Finalisation}
+\label{sec:finalisation}
 Le système est alors complet, chaque compartiment est représenté et décrit à travers son volume,
 son rayon, et sa longueur. Dans la perspective d’une modélisation par un système d’équations
 différentielles ordinaires, la structure peut s’avérer complexe à appréhender. En effet, nous allons
