--- a/Chapitre4.tex
+++ b/Chapitre4.tex
@@ -221,7 +221,7 @@ le vaisseau, à droite dans le bruit.}
 \end{figure}
 Les images en contraste de phase disposent d’une consistance temporelle au niveau du vaisseau,
 c’est-à-dire qu’ensemble elles aboutissent à un signal 1D cohérent. Or le signal à l’extérieur des
-vaisseaux représente un bruit incohérent (Figure 32). En effet, le LCS et le sang ont un mouvement
+vaisseaux représente un bruit incohérent (Figure \ref{fig:3_4_bruit_contraste_phase}). En effet, le LCS et le sang ont un mouvement
 synchronisé sur le cycle cardiaque, et nous savons qu’une séquence est un échantillonnage d’un cycle
 cardiaque, donc il est possible d’utiliser la dimension temporelle pour notre segmentation.\\
 On notera tout d’abord les approches dites de « clustering » ou regroupement par similitude sur
