--- a/Main.tex
+++ b/Main.tex
@@ -31,7 +31,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%   			Liste des fichiers à compiler					%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-	\includeonly{Chapitre1,Chapitre2,Chapitre3,Chapitre4,Annexes}
+	\includeonly{Chapitre1,Chapitre2,Chapitre3,Chapitre4,Chapitre5,Annexes}
  
 
 
@@ -84,7 +84,8 @@
 	\includefrom{rep_Chapitre1/}{Chapitre1}	
 	\includefrom{rep_Chapitre2/}{Chapitre2} 		
 	\includefrom{rep_Chapitre3/}{Chapitre3}	
-	\includefrom{rep_Chapitre4/}{Chapitre4}	
+	\includefrom{rep_Chapitre4/}{Chapitre4}
+	\includefrom{rep_Chapitre5/}{Chapitre5}	
 	
 	
 	% Annexes
