--- a/Chapitre2.tex
+++ b/Chapitre2.tex
@@ -223,14 +223,14 @@ Comme nous l’avons vu l’arbre vasculaire est un système complexe. Il convie
 %%%
 \begin{figure}[!t]
 \centering
-\includegraphics[width=9cm]{1_13_compensation_flux}
+\includegraphics[width=12cm]{1_13_compensation_flux}
 \caption{Exemple de la compensation de flux en IRM sur une séquence de type écho de gradient. L'impulsion radiofréquence (RF) est indiquée en première ligne, les gradients standard en seconde ligne, la troisième ligne présente en orange les lobes additionnels pour la compensation de flux. L'évolution de la phase pour les spins mobiles apparait en dernière ligne, sans compensation de flux (bleu) et avec (orange). Sans compensation, la phase des spins mobiles est positive. Avec compensation la phase au centre de l'écho est nulle. \textcolor{green}{ref : http://mri-q.com/flow-compensation.html }}
 \label{fig:1_13_compensation_flux}	
 \end{figure}
 
 %%%
 %%%
-Enfin il est important d'évoquer un dernier point relatif à l'imagerie des vaisseaux : la compensation de flux. Dans les séquences d'imagerie classiques (excepté le contraste de phase), la phase des spins est sensée correspondre à une information spatiale uniquement (codage de phase). Un gradient bipolaire dont les deux lobes positifs et négatifs sont de même importance n'a pas d'effet sur la phase des spins stationnaires. En revanche, si un spin est en mouvement dans l'axe du gradient, il ne va pas subir le même effet de gradient en fonction de sa position. Par conséquent, les spins mobiles seront mal positionnés et on observera un artéfact de déplacement des structures vasculaires et des fluides en mouvement. Dans notre contextece genre d'artéfacts nous empêcherais d'identifier avec précision les vaisseaux. Dès la fin des années 1980, Pattany et al. \textcolor{green}{ref : Pattany et al., “Motion Artifact Suppression Technique (MAST) for MR Imaging.”} ont proposé un ajustement des gradients afin de corriger ces artéfacts ({\em Motion Artifact Suppression Technique (MAST)}), connues maintenant sous le nom de {\em compensation de flux}. Dans cette approche, des lobes de gradient additionnels sont rajoutés préalablement à la lecture du signal afin de compenser les déphasages induits par les mouvements au temps d'écho. La Figure~\ref{fig:1_13_compensation_flux}\\
+Enfin il est important d'évoquer un dernier point relatif à l'imagerie des vaisseaux : la compensation de flux. Dans les séquences d'imagerie classiques (excepté le contraste de phase), la phase des spins est sensée correspondre à une information spatiale uniquement (codage de phase). Un gradient bipolaire dont les deux lobes positifs et négatifs sont de même importance n'a pas d'effet sur la phase des spins stationnaires. En revanche, si un spin est en mouvement dans l'axe du gradient, il ne va pas subir le même effet de gradient en fonction de sa position. Par conséquent, les spins mobiles seront mal positionnés et on observera un artéfact de déplacement des structures vasculaires et des fluides en mouvement. Dans notre contextece genre d'artéfacts nous empêcherais d'identifier avec précision les vaisseaux. Dès la fin des années 1980, Pattany et al. \textcolor{green}{ref : Pattany et al., “Motion Artifact Suppression Technique (MAST) for MR Imaging.”} ont proposé un ajustement des gradients afin de corriger ces artéfacts ({\em Motion Artifact Suppression Technique}), connues maintenant sous le nom de {\em compensation de flux}. Dans cette approche, des lobes de gradient additionnels sont rajoutés préalablement à la lecture du signal afin de compenser les déphasages induits par les mouvements au temps d'écho. La Figure~\ref{fig:1_13_compensation_flux}\\
 Les séquences utilisées à l'exception du contraste de phase disposeront docn de compensation de flux dans deux directions voir 3 si disponible.\\
 Ce protocole sera complété à la fin de la seconde partie par les modes d’imagerie donnant accès à la {\em dynamique}.
 
