ajout compensation flux

--- a/Chapitre2.tex
+++ b/Chapitre2.tex
@@ -230,8 +230,10 @@ Comme nous l’avons vu l’arbre vasculaire est un système complexe. Il convie
 
 %%%
 %%%
-Enfin il est important d'évoquer un dernier point relatif à l'imagerie des vaisseaux : la compensation de flux. Dans les séquences d'imagerie classiques (excepté le contraste de phase), la phase des spins est sensée correspondre à une information spatiale uniquement (codage de phase). Un gradient bipolaire dont les deux lobes positifs et négatifs sont de même importance n'a pas d'effet sur la phase des spins stationnaires. En revanche, si un spin est en mouvement dans l'axe du gradient, il ne va pas subir le même effet de gradient en fonction de sa position. Par conséquent, les spins mobiles seront mal positionnés et on observera un artéfact de déplacement des structures vasculaires et des fluides en mouvement. Dans notre contextece genre d'artéfacts nous empêcherais d'identifier avec précision les vaisseaux. Dès la fin des années 1980, Pattany et al. \textcolor{green}{ref : Pattany et al., “Motion Artifact Suppression Technique (MAST) for MR Imaging.”} ont proposé un ajustement des gradients afin de corriger ces artéfacts ({\em Motion Artifact Suppression Technique}), connues maintenant sous le nom de {\em compensation de flux}. Dans cette approche, des lobes de gradient additionnels sont rajoutés préalablement à la lecture du signal afin de compenser les déphasages induits par les mouvements au temps d'écho. La Figure~\ref{fig:1_13_compensation_flux}\\
-Les séquences utilisées à l'exception du contraste de phase disposeront docn de compensation de flux dans deux directions voir 3 si disponible.\\
+Enfin il est important d'évoquer un dernier point relatif à l'imagerie des vaisseaux : la compensation de flux. Dans les séquences d'imagerie classiques (excepté le contraste de phase), la phase des spins est sensée correspondre à une information spatiale uniquement (codage de phase). Un gradient bipolaire dont les deux lobes positifs et négatifs sont de même importance n'a pas d'effet sur la phase des spins stationnaires. En revanche, si un spin est en mouvement dans l'axe du gradient, il ne va pas subir le même effet de gradient en fonction de sa position. Par conséquent, les spins mobiles seront mal positionnés et on observera un artéfact de déplacement des structures vasculaires et des fluides en mouvement. Dans notre contextece genre d'artéfacts nous empêcherais d'identifier avec précision les vaisseaux. Dès la fin des années 1980, Pattany et al. \textcolor{green}{ref : Pattany et al., “Motion Artifact Suppression Technique (MAST) for MR Imaging.”} ont proposé un ajustement des gradients afin de corriger ces artéfacts ({\em Motion Artifact Suppression Technique}), connues maintenant sous le nom de {\em compensation de flux}. Dans cette approche, des lobes de gradient additionnels sont rajoutés préalablement à la lecture du signal afin de compenser les déphasages induits par les mouvements au temps d'écho. La Figure~\ref{fig:1_13_compensation_flux} illustre l'effet des lobes additionnels sur les spins mobiles. Pour les spins stationnaires, les lobes additionnels de gradient (orange) n'ont aucun effet, chacun ajoutant ou réduisant une quantité de phase constante. Puisqu'il y a deux lobes positifs et deux lobes négatifs avant le centre de l'écho, leur effet net est nul. Pour les spins mobiles, l'effet est différent. La courbe bleue indique l'évolution de la phase dans la séquence standard. Les spins mobiles accumulent une phase non nulle au centre de l'écho (cercle bleu), ce qui se traduit par une perte de signal sur l'image. L'effet des nouveaux lobes sur les spins mobiles est illustrée par la courbe orange. Le premier lobe créé un gain de phase, mais le second, lorsqu'il s'ajoute au premier lobe bleu créé une perte de phase fortement négative. Cependant la phase de ces spins devient nulle au centre de l'écho (cercle orange).\\
+La compensation de flux peut être réalisée dans la direction de la sélection de coupe aussi bien que dans la direction de lecture. Les limitations principales de cette technique sont que : (1) elle ne corrige que du mouvement à {\em vitesse constante}; (2) le $TE$ minimum est allongé du fait du temps requis pour ajuster les nouveaux gradients; (3) la pression sur les gradients est accrue limitant potentiellement le champ de vue ou l'épaisseur de coupe pour un $TR$ donné; et (4) des artéfacts causés par les courants de Foucault pouvant être induit par la commutation rapide des gradients.
+\\
+Afin d'améliorer la qualité de nos images morphologiques et limiter les artéfacts dans l'image, les séquences utilisées à l'exception du contraste de phase disposeront donc de compensation de flux dans deux directions voir trois si possible.\\
 Ce protocole sera complété à la fin de la seconde partie par les modes d’imagerie donnant accès à la {\em dynamique}.
 
 
